--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@ window.dataLayer = new Proxy([], {
 <source srcset="https://d25zu39ynyitwy.cloudfront.net/oms/3891/image/2024/10/W0SJX_1729891241037/1729891241037.webp" type="image/webp"/>
 <img alt="Top view of two people working at a table with a laptop and notebook" src="../d25zu39ynyitwy.cloudfront.net/oms/3891/image/2024/10/BSUGM_1729891241037/1729891241037.jpg"/>
 </picture>
-<p>The Nike Internship Experience</p>
+<p>APPLY FOR A MARKETING POSITION</p>
 <figcaption>Learn More</figcaption>
 </figure>
 </a>
@@ -382,7 +382,7 @@ window.dataLayer = new Proxy([], {
 <source srcset="https://d25zu39ynyitwy.cloudfront.net/oms/3891/image/2024/10/LTS87_1729891241036/1729891241036.webp" type="image/webp"/>
 <img alt="Double exposure of a person's side profile with birds flying in the background" src="../d25zu39ynyitwy.cloudfront.net/oms/3891/image/2024/10/LQ6P8_1729891241035/1729891241035.jpg"/>
 </picture>
-<p>AI/ML Roles for Innovators</p>
+<p>SCHEDULE A CALL</p>
 <figcaption>Learn More</figcaption>
 </figure>
 </a>
