--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@ window.dataLayer = new Proxy([], {
 </div>
 <div class="spotlight spotlight-two-col flip-desktop">
 <picture>
-<img alt="A meditation room with a person sitting cross-legged on a wooden bench beneath the words just do it" src="../d25zu39ynyitwy.cloudfront.net/oms/3891/image/2024/11/V541H_nike-inside-out-768-new/nike-inside-out-768-new.jpg">
+<img alt="A meditation room with a person sitting cross-legged on a wooden bench beneath the words just do it" src="/nike-inside-out-768-new.jpg">
 </img></picture>
 <div class="textbox">
 <span class="eyebrow">Elevating Your Well-Being</span>
