--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@ window.dataLayer = new Proxy([], {
 <div class="spotlight spotlight-two-col">
 <picture>
 <picture>
-<img alt="A person rides a bicycle near a large sculpture that says DO THE RIGHT THING beside a body of water" src="../d25zu39ynyitwy.cloudfront.net/oms/3891/image/2024/11/2HNDS_nike-home-purpose-play-768/nike-home-purpose-play-768.jpg">
+<img alt="A person rides a bicycle near a large sculpture that says DO THE RIGHT THING beside a body of water" src="/nike-home-purpose-play-768.jpg">
 </img></picture>
 </picture>
 <div class="textbox">
