--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <!DOCTYPE html>
 
-<html country="Kosovo" lang="en">
+<html country="US" lang="en">
 <!-- Mirrored from careers.nike.com/ by HTTrack Website Copier/3.x [XR&CO'2014], Fri, 07 Feb 2025 02:45:41 GMT -->
 <!-- Added by HTTrack --><meta content="text/html;charset=utf-8" http-equiv="content-type"/><!-- /Added by HTTrack -->
 <head>
